Added content to the 2 ingredient recipe.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
     <h1>Odin Recipes</h1>
 
     <hr>
-    
-    <a href="./recipes/2-ingredient-egg-banana-pancakes.html">2 Ingredient Egg Banana Pancakes</a>
 
-    <br> 
+    <!-- <a href="./recipes/2-ingredient-egg-banana-pancakes.html">2 Ingredient Egg Banana Pancakes</a> -->
 
-    <img src="./images/2-ing-pancakes.jpg" alt="2 Ingredient Egg Banana Pancakes" width="300px" title:2 Ingredient Egg Banana Pancakes> 
+    <br>
+    <!--
+    <img src="./images/2-ing-pancakes.jpg" alt="2 Ingredient Egg Banana Pancakes" width="300px" title= "2 Ingredient Egg Banana Pancakes"> -->
 
+    <br>
+
+    <figure>
+
+        <a href="./recipes/2-ingredient-egg-banana-pancakes.html"><img src="./images/2-ing-pancakes.jpg"
+                alt="2 Ingredient Egg Banana Pancakes" width="300px" title="2 Ingredient Egg Banana Pancakes";> </a> <figcaption>2 Ingredient Egg Banana Pancakes</figcaption>
+
+    </figure>
 
 </body>
 
