--- a/recipes/2-ingredient-egg-banana-pancakes.html
+++ b/recipes/2-ingredient-egg-banana-pancakes.html
@@ -10,24 +10,26 @@
 <body>
     <h1>2 Ingredient Egg Banana Pancakes</h1>
 
+    <hr>
+    <h4 style=margin-bottom:10px; "font-size: 1.2em;"> Difficulty level: Easy </h4>
+
     <img src="../images/2-ing-pancakes.jpg" alt="2 Ingredient Egg Banana Pancakes"
         title="2 Ingredient Egg Banana Pancakes" width=450px>
 
-    <h2>Ingredients:</h2>
 
-    <h3>Why egg banana pancakes?</h3>
 
-    <P>Everyone loves a pancake but not everyone loves the carb heavy recipes we often see such as the typical fluffy
+    <h2>Why egg banana pancakes?</h2>
+
+    <p>Everyone loves a pancake but not everyone loves the carb heavy recipes we often see such as the typical fluffy
         American pancake so here is an option when you want to up your protein and healthy fats whilst staying grain
-        free.</P>
+        free.
+    </p>
 
 
-    <h4>Difficulty level: Easy </h4>
-
-
-    <P>These are:
+    <h3>Some characteristics:</h3>
 
     <ol>
+
         <li>
             Rich in Protein: Eggs are a complete protein source, containing all nine essential amino acids that the body
             cannot produce on its own. By combining eggs with banana, you create a protein-rich pancake that can help
@@ -62,16 +64,17 @@
             as
             those following paleo or grain-free diets.
         </li>
-
-        Slow Release of Energy: Unlike traditional pancakes made with refined flour and sugar, pancakes made with
-        eggs and banana have a lower glycemic index (GI), meaning they cause a slower and more gradual increase in blood
-        sugar levels after consumption. The combination of protein from eggs and fiber from banana helps slow down the
-        absorption of glucose into the bloodstream, preventing rapid spikes and crashes in blood sugar levels. This
-        steady release of energy can help maintain stable energy levels throughout the day and reduce the risk of
-        experiencing fluctuations in mood and energy commonly associated with high-GI foods.
+        <li>
+            Slow Release of Energy: Unlike traditional pancakes made with refined flour and sugar, pancakes made with
+            eggs and banana have a lower glycemic index (GI), meaning they cause a slower and more gradual increase in
+            blood
+            sugar levels after consumption. The combination of protein from eggs and fiber from banana helps slow down
+            the
+            absorption of glucose into the bloodstream, preventing rapid spikes and crashes in blood sugar levels. This
+            steady release of energy can help maintain stable energy levels throughout the day and reduce the risk of
+            experiencing fluctuations in mood and energy commonly associated with high-GI foods.
         </li>
     </ol>
-    </P>
 
     <p>
         In summary, pancakes made with just eggs and banana provide a nutritious and wholesome breakfast option, packed
@@ -84,6 +87,41 @@
         balanced blood sugar levels, providing sustained energy and promoting overall well-being.
     </p>
 
+
+
+    <h3>Ingredients:</h3>
+
+
+    <ul>
+        <li>3 eggs;</li>
+
+        <li>1 banana;</li>
+
+        <h4>Optional extras:</h4>
+
+        <li>cinnamon;</li>
+
+        <h4>Toppings:</h4>
+
+        <li>Plain live yoghurt or coconut yoghurt;</li>
+
+        <li>Berries with a dollop of almond butter.</li>
+
+
+    </ul>
+
+    <h3>Intructions:</h3>
+
+    <ol>
+        <li>Combine all ingredients;</li>
+
+        <li>Blend in blender;</li>
+
+        <li>Pour into pan - Cook for a minute or two either side until lightly coloured and serve;</li>
+
+        <li>Serve topped with nut butter, yoghurt, berries, bee pollen, cacao, or even nitrate free bacon or avocado and
+            a sprinkle of chilli and Himalayan salt or a savoury version.</li>
+    </ol>
 
 
 
